// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view-form Renders \`view-form\` with custom props 1`] = `
<div
  class="layout column"
>
  <!---->
  <c-name-field-stub
    label="Title"
    name="title"
    required=""
    value="View title"
  />
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Description
          </label>
          <input
            name="description"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <c-enabled-field-stub
    value="true"
  />
  <periodic-refresh-field-stub
    label="Periodic refresh"
    name="periodic_refresh"
    periodicrefresh="[object Object]"
  />
  <view-tags-field-stub
    value="View tag"
  />
  <view-group-field-stub
    groups="[object Object]"
    value="[object Object]"
  />
</div>
`;

exports[`view-form Renders \`view-form\` with default props 1`] = `
<div
  class="layout column"
>
  <!---->
  <c-name-field-stub
    label="Title"
    name="title"
    required=""
  />
  <div
    class="v-input theme--light v-text-field"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Description
          </label>
          <input
            name="description"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <c-enabled-field-stub />
  <periodic-refresh-field-stub
    label="Periodic refresh"
    name="periodic_refresh"
    periodicrefresh="[object Object]"
  />
  <view-tags-field-stub
    value=""
  />
  <view-group-field-stub
    groups=""
  />
</div>
`;
